# grid_world_pain

./: .gitignore  README.md  evaluation.py  evaluation_log.txt  generate_demo.sh  main.py  pyproject.toml  train.py  train_rl.py  visualize.py
configs/: default_configs.yaml
configs/agents/: dqn.yaml  q_learning.yaml
configs/environment/: environment.yaml
configs/models/: dqn.yaml  dreamer_v3.yaml  drqn.yaml  ppo.yaml  q_learning.yaml  recurrent_ppo.yaml
results/DQN/20260115-205601_test_structure_dqn/models/: config.yaml
results/DQN/20260115-210659_reorg_test_dqn/models/: config.yaml
results/DQN/20260115-210818_dqn_verify_decouple/models/: config.yaml
results/DQN/20260115-211122_dqn_verify_final_pth/models/: config.yaml
results/DQN/20260115-212403_default/models/: config.yaml
results/DQN/20260115-213214_sensory/models/: config.yaml
results/Debug_DQN/20260115-205654_test_structure_debug/: config.yaml
results/Debug_DQN/20260115-212815_default/: config.yaml
results/PPO/20260115-211556_ppo_verify/models/: config.yaml
results/models/: config.yaml  training_history.csv
src/environment/: config.py  grid_world.py  sensor.py  visualization.py
src/grid_world_pain/: agent.py  body.py  config.py  grid_world.py  sensory.py  visualization.py
src/models/: dqn.py  dqn_agent.py  dreamer_v3.py  drqn.py  ppo.py  q_learning_agent.py  recurrent_ppo.py
src/utils/: activation_monitor.py  lrp_monitor.py  visualization.py
