[project]
name = "grid_world_pain"
version = "0.1.0"
description = "A simple custom Gridworld environment"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "matplotlib",
    "imageio",
    "imageio-ffmpeg",
    "numpy",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
