[project]
name = "grid_world_pain"
version = "0.1.0"
description = "Gridworld environment with interoceptive satiation dynamics"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "matplotlib>=3.10.8",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.4.1",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
