[project]
name = "grid_world_pain"
version = "0.1.0"
description = "Gridworld environment with interoceptive satiation dynamics"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "matplotlib>=3.10.8",
    "PyYAML>=6.0.3",
    "tqdm>=4.67.1",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "h5py>=3.10.0",
    "captum>=0.7.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
